# spine-annotation-tool

./: .gitignore  README.md  main.py  pyproject.toml
.github/issues/: pedicle-annotation-extension.md
.github/workflows/: release.yml
docs/: README.md  pedicle-annotation-extension.md
hooks/: hook-numpy.py  hook-onnxruntime.py  hook-spine_infer.py  rthook_onnxruntime.py
scripts/: build_windows.ps1  release.sh
src/spine_annotator/: __init__.py
src/spine_annotator/core/: converter.py  crop_converter.py  crop_generator.py  inference.py  models.py  pedicle_exporter.py  runtime_bootstrap.py
src/spine_annotator/ui/: crop_canvas.py  crop_window.py  image_canvas.py  inference_worker.py  main_window.py  pedicle_full_canvas.py  pedicle_full_window.py
