[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spine-annotator"
version = "0.4.2"
description = "Spine vertebrae annotation tool with OBB support and AI-assisted inference"
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.15.0",
    "numpy>=1.21.0,<2.0",
    "opencv-python-headless>=4.5.0,<4.10",
    "Pillow>=9.0.0",
    "onnxruntime==1.17.3",
    "spine-infer>=0.2.0",
]

[project.scripts]
spine-annotator = "spine_annotator.main:main"
